apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
